# Fake-Reviewes-Detector

./: README.md  environment.yml  pyproject.toml  requirements.txt  run_app.bat  run_app.sh
config/: config.yml  gui_config.yaml  local_dev.yaml
models/: fake_detector.joblib
src/fake_reviews_classifier/: data.py  predict.py  preprocess.py  train.py
src/fake_reviews_detector/: cli.py  data_handler.py  data_loader.py  front.py  gui.py  logger.py  main.py  model.py  preprocess.py  preprocessing.py  preview.py  train.py  utils.py
src/fake_reviews_detector/data/model/: model.pkl  vectorizer.pkl
